aligned navbar and corrected footer

--- a/src/components/FooterPage/footer.css
+++ b/src/components/FooterPage/footer.css
@@ -4,10 +4,7 @@ a{
     font-size: small;
 } 
 
-li{
-    text-align: left;
-    text-indent: 6em;
-}
+
 
 p{
     font-size: small;
